시뮬레이션 코드 추가

--- a/index.html
+++ b/index.html
@@ -1,8 +1,19 @@
 <!DOCTYPE html>
 
 <html>
+<head>
+    <meta charset="UTF-8">
+    <script src="demo/processing.min.js"></script> 
+</head>
 <body>
-<h1>Hello World</h1>
-<p>I'm hosted with GitHub Pages.</p>
+<h1>안드로이드 Location API 선택하기</h1>
+<p>정확한 위치 추적을 위해 어떤 API를 사용해야 할지 선택하기 위해, API 분석과 테스트를 진행했습니다. <br/>
+내용은 <a href="https://github.com/brownsoo/Choosing-Android-Location-API/">소스 페이지</a>에 정리했습니다.</p>
+<br/>
+<p>아래는 위치 보정을 시뮬레이션한 데모입니다. 클릭해보세용.
+작성중...
+</p>
+<br/>
+<canvas data-processing-sources="demo/stabilizing_locations.pde" style="background-color: #a0a0a0"></canvas>
 </body>
 </html>
