--- a/index.html
+++ b/index.html
@@ -3,17 +3,27 @@
 <html>
 <head>
     <meta charset="UTF-8">
+    <meta name="description" content="Location Stabilizer demo"> 
+    <meta name="keywords" content="Location, Android, JavaScript">
+    <meta name="author" content="Brownsoo">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="demo/processing.min.js"></script> 
+    <style type="text/css">
+    body {
+        font-family: monospace;
+        padding: 10pt;
+    }
+    </style>
 </head>
 <body>
 <h1>안드로이드 Location API 선택하기</h1>
 <p>정확한 위치 추적을 위해 어떤 API를 사용해야 할지 선택하기 위해, API 분석과 테스트를 진행했습니다. <br/>
-내용은 <a href="https://github.com/brownsoo/Choosing-Android-Location-API/">소스 페이지</a>에 정리했습니다.</p>
+내용은 <a href="https://github.com/brownsoo/Choosing-Android-Location-API/">Github 페이지</a>에 정리했습니다.</p>
 <br/>
-<p>아래는 위치 보정을 시뮬레이션한 데모입니다. 클릭해보세용.
-작성중...
+<p>아래는 위치 보정 내용을 시뮬레이션한 데모입니다. <br>
+    클릭해보세용.
 </p>
 <br/>
-<canvas data-processing-sources="demo/stabilizing_locations.pde" style="background-color: #a0a0a0"></canvas>
+<canvas data-processing-sources="demo/stabilizing_locations.pde" style="border: 2pt solid powderblue"></canvas>
 </body>
 </html>
